# agent-baton

./: .claudeignore  .gitattributes  .gitignore  <MagicMock name='mock.db_path' id='123937102897520'>  ACTION-PLAN.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  INSTALL-PROMPT.md  LICENSE  MANIFEST.in  Makefile  PMO_UI_PLAN_RUNNEXT.md  QUICKSTART.md  README.md  RESUME_KNOWLEDGE_DELIVERY.md  REVIEW-consulting-delivery-platform.md  RUN_ME_NEXT.md  SECURITY.md  TODO-001-review-findings.md  docker-compose.yml  docs-requirements.txt  install.ps1  install.sh  llms.txt  mkdocs.yml  pyproject.toml  re-architecture HDD.md  re-architecture TDD.md  re-architecture orchestration HDD.md  re-architecture orchestration plan.md  reproduce_api_traversal.py  reproduce_traversal.py  settings.json  tsconfig.json
.beads/: config.yaml  interactions.jsonl  metadata.json
.claude/agents/: architect.md  backend-engineer--node.md  backend-engineer--python.md  data-engineer.md  data-scientist.md  devops-engineer.md  frontend-engineer--dotnet.md  frontend-engineer--react.md  frontend-engineer.md  orchestrator.md  spec-document-reviewer.md  subject-matter-expert.md  test-engineer.md  visualization-expert.md
.claude/references/: cost-budget.md  git-strategy.md  guardrail-presets.md  hooks-enforcement.md
.github/workflows/: docs-deploy.yml  release-pypi.yml  tests.yml
.superpowers/sdd/: bd-rm-ux-p1-report.md
agent_baton/: CLAUDE.md  __init__.py  __main__.py
agent_baton/_bundled_agents/: CLAUDE.md  archetype-james-engineering-manager.md  architect.md  auditor.md  backend-engineer--node.md  code-reviewer.md  data-analyst.md  data-scientist.md  immune-autofix.md  immune-doc-drift.md  immune-stale-comment.md  immune-untested-edges.md  learning-analyst.md  orchestrator.md  system-maintainer.md  talent-builder.md  task-runner.md  team-lead.md  test-engineer.md  visualization-expert.md
agent_baton/_bundled_visualize/: web_template.html
agent_baton/api/: CLAUDE.md  __init__.py  deps.py  planner_errors.py  server.py
agent_baton/cli/: CLAUDE.md  __init__.py  _context.py  _override_helper.py  colors.py  errors.py  formatting.py  main.py
agent_baton/core/: CLAUDE.md  __init__.py  async_dispatch.py  classifier.py  compliance.py  context.py  dashboard.py  escalation.py  evolution.py  git_manager.py  incident.py  plan.py  policy.py  registry.py  retrospective.py  router.py  scoring.py  sharing.py  spec_validator.py  telemetry.py  transfer.py  usage.py  validator.py  vcs.py
agents/: CLAUDE.md  auditor.md  backend-engineer--python.md  backend-engineer.md  data-analyst.md  data-engineer.md  devops-engineer.md  frontend-engineer--dotnet.md  frontend-engineer--react.md  frontend-engineer.md  immune-deprecated-api.md  immune-todo-rot.md  orchestrator.md  security-reviewer.md  self-heal-haiku.md  self-heal-opus.md  self-heal-sonnet.md  speculative-drafter.md  subject-matter-expert.md  swarm-reconciler.md  talent-builder.md  task-runner.md
audit-reports/: 01-core-engine.md  02-learn-improve.md  03-storage-sync-events.md  04-observability-telemetry.md  05-governance.md  05b-pmo.md  06-distribution-experimental.md  07-cli-wiring.md  08-pmo-gaps.md  claude-code-caching-version-check.md
docs/: CLAUDE.md  PRODUCTION_READINESS.md  agent-roster.md  api-reference.md  architecture.md  baton-engine-bugs.md  cli-reference.md  daemon-mode-evaluation.md  design-decisions.md  engine-and-runtime.md  finops-chargeback.md  governance-knowledge-and-events.md  index.md  invariants.md  learning-automation.md  observe-learn-and-improve.md  orchestrator-usage.md  pillars.md  pyright-diagnostics-triage.md  storage-sync-and-pmo.md  terminology.md  troubleshooting.md
overrides/: main.html
pmo-ui/: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
proposals/: 001-async-execution-runtime.md  001-implementation-plan.md  002-service-api-layer.md  003-closed-loop-autonomous-learning.md  004-parallel-execution-engine.md  005-core-stabilization-and-ux.md  005a-implementation-plan.md  005a-persistence-integrity.md  005b-god-object-refactor.md  005b-implementation-plan.md  005c-ux-facade.md  005d-implementation-plan.md  005d-router-enhancements.md  006-fable-era-modernization.md  007-pare-to-the-moat.md  project-timeline-decomposition.md  worktree-isolation-fix.md
references/: CLAUDE.md  adaptive-execution.md  agent-authoring.md  agent-routing.md  baton-engine.md  baton-patterns.md  comms-protocols.md  compliance-audit-chain.md  decision-framework.md  doc-generation.md  evidence-bundle.md  failure-handling.md  guardrail-presets.md  hooks-enforcement.md  knowledge-architecture.md  planning-taxonomy.md  research-procedures.md  task-sequencing.md  team-messaging.md
scripts/: CLAUDE.md  baton-notes-merge  baton-notes-merge.py  build_dist.sh  file_extreme_scale_beads.py  file_strategic_gaps.py  install.ps1  install.sh  migrate_beads_to_notes.py  record_spec_audit_beads.py  restore_baton_db.sh  sync_bundled_agents.sh  update_velocity_beads.py
templates/: CLAUDE.md  baton.yaml.example  learning-cycle-plan.json  settings.json
tests/: CLAUDE.md  _subprocess_helpers.py  conftest.py  test_adapters.py  test_adr13b_wp2.py  test_api_agents.py  test_api_auth.py  test_api_decisions.py  test_api_events.py  test_api_executions.py  test_api_feedback.py  test_api_health.py  test_api_learn.py  test_api_observe.py  test_api_plans.py  test_api_pmo.py  test_api_pmo_beads.py  test_api_pmo_decisions.py  test_api_pmo_gates.py  test_api_pmo_h3.py  test_api_webhooks.py  test_approval_and_amendments.py  test_approval_workflow.py  test_archetype_classification.py  test_archetype_decomposition.py  test_archetype_execution_models.py  test_architecture.py  test_architecture_touchground.py  test_archiver.py  test_async_dispatch.py  test_audit_fixes.py  test_bd_backend.py  test_bead_cli.py  test_bead_cmd_cli.py  test_bead_cmd_worktree_discovery.py  test_bead_model.py  test_bead_signal.py  test_bead_signal_wiring.py  test_bead_store.py  test_bead_synthesizer.py  (+233 more)
(+1025 files in other folders)
