[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-baton"
version = "0.1.0"
description = "Multi-agent orchestration system for Claude Code"
readme = "README.md"

requires-python = ">=3.10"
keywords = ["claude", "ai", "agents", "orchestration", "multi-agent", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0,<7",
]

[project.urls]
Homepage = "https://github.com/DaveGerson/agent-baton"
Repository = "https://github.com/DaveGerson/agent-baton"
Documentation = "https://github.com/DaveGerson/agent-baton#readme"
Issues = "https://github.com/DaveGerson/agent-baton/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9",
    "pytest-cov>=4.0,<8",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "sse-starlette>=2.0",
    "pydantic>=2.0",
    "python-json-logger>=3.0",
]
classify = [
    "anthropic>=0.40",
]

[project.scripts]
baton = "agent_baton.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_baton*"]

[tool.setuptools.package-data]
agent_baton = ["_bundled_agents/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
