[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-baton"
version = "0.1.0"
description = "Multi-agent orchestration system for Claude Code"
readme = "README.md"
license = { text = "Proprietary - All Rights Reserved" }
authors = [
    { name = "Dave Gerson", email = "gersondave@gmail.com" },
]

requires-python = ">=3.10"
keywords = ["claude", "ai", "agents", "orchestration", "multi-agent", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0,<7",
    "cryptography>=42.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/DaveGerson/agent-baton"
Repository = "https://github.com/DaveGerson/agent-baton"
Documentation = "https://github.com/DaveGerson/agent-baton#readme"
Issues = "https://github.com/DaveGerson/agent-baton/issues"
Changelog = "https://github.com/DaveGerson/agent-baton/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9",
    "pytest-cov>=4.0,<8",
]
pmo = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "sse-starlette>=2.0",
    "pydantic>=2.0",
    "python-json-logger>=3.0",
]
# Keep 'api' as an alias for 'pmo' for backward compatibility
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "sse-starlette>=2.0",
    "pydantic>=2.0",
    "python-json-logger>=3.0",
]
daemon = [
    "uvicorn[standard]>=0.30",
]
classify = [
    "anthropic>=0.40",
]
swarm = [
    "libcst>=1.0",
]
predict = [
    "watchdog>=3.0",
]
viz = [
    "rich>=13.0,<14",
]
all = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "sse-starlette>=2.0",
    "pydantic>=2.0",
    "python-json-logger>=3.0",
    "anthropic>=0.40",
    "libcst>=1.0",
    "watchdog>=3.0",
    "rich>=13.0,<14",
]

[project.scripts]
baton = "agent_baton.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_baton*"]

[tool.setuptools.package-data]
agent_baton = [
    "_bundled_agents/*.md",
    "visualize/*.html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
